<resources>
    <string name="app_name">AQM</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="login">LOGIN</string>
    <string name="e_mail_address">E-MAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="create_a_new_account">CREATE A NEW ACCOUNT</string>
    <string name="logo">LOGO</string>
    <string name="email">EMAIL</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in_to_your_account">Sign In to Your Account</string>
    <string name="account_creation">Account Creation</string>
    <string name="business">Business</string>
    <string name="name">Name</string>
    <string name="namea">NAME</string>
    <string name="businessa">BUSINESS</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="floor_name">Floor Name</string>
    <string name="room_name">Room Name</string>
    <string name="search">SEARCH</string>
    <string name="add_a_new_room">Add a new room</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="air_quality">Air Quality</string>
    <string name="co2_level">Co2 Level</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="add_room">ADD ROOM</string>
    <string name="give_this_room_a_title">Give this room a title</string>
    <string name="proceed">Proceed</string>
    <string name="room_title">ROOM TITLE</string>
    <string name="title_activity_detect_occupancy">DetectOccupancy</string>
    <string name="detect_occupancy">Detect Occupancy</string>
    <string name="update">Update</string>
    <string name="update_room_title">Update room title</string>
    <string name="update_room">Update Room</string>
    <string name="isfanenabled">isFanEnabled</string>
    <string name="light">Light</string>
    <string name="occupancy">Occupancy</string>
    <string name="measurement_of_how_hot_or_cold_the_room_is">Measurement of how hot or cold the room is</string>
    <string name="temp">Temperature</string>
    <string name="hum">Humidity</string>
    <string name="co2">CO2</string>
    <string name="lighting">Lighting</string>
    <string name="lux">lux</string>
    <string name="ppm">ppm</string>
    <string name="created_from_metabolic_activity_crowded_indicator">Created from metabolic activity - crowded indicator</string>
    <string name="concentration_of_water_vapor_present_in_the_air">Concentration of water vapor present in the air</string>
    <string name="measurement_of_light_which_quantifies_the_brightness">Measurement of light which quantifies the brightness</string>
    <string name="perc">%</string>
    <string name="c">°C</string>
    <string name="xxx">XXX</string>
    <string name="aqi">AQI</string>
    <string name="good_air_quality">GOOD AIR QUALITY</string>
    <string name="air_quality_status">AIR QUALITY STATUS</string>
    <string name="go_back">go back</string>
    <string name="size_20_meters_squared">Size : 20 meters squared</string>
    <string name="capacity_2_persons">Capacity : 2 persons</string>
    <string name="view_more">View More…</string>
    <string name="rooms_list">ROOMS LIST</string>
    <string name="add_a_room">ADD A ROOM</string>
    <string name="room_details">Room Details</string>
    <string name="room_size">ROOM SIZE (m^2)</string>
    <string name="room_capacity">ROOM CAPACITY</string>
    <string name="room_update">ROOM UPDATE</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="rooms">Rooms</string>
    <string name="air_purifier">Air Purifier</string>
    <string name="hello_username">Hello, username</string>
    <string name="check_the_air_quality_indicators">Check the air quality</string>
    <string name="predict_if_the_room_is_occupied_or_unoccupied">Predict room occupancy</string>
    <string name="view_the_list_of_rooms_added">View the list of rooms added</string>
    <string name="turn_on_off_the_fan">Turn on/off the fan</string>
    <string name="sign_out">Sign out</string>
    <string name="control_purifier">Control Purifier</string>
    <string name="fan_stuatus_on">Fan Stuatus : -</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="fan_status">Fan Status</string>
    <string name="this_room_is_occupied">This Room is Occupied</string>
    <string name="humiditys">Humidity (%)</string>
    <string name="co2_level_ppm">Co2 Level (ppm)</string>
    <string name="light_level_lux">Light Level (lux)</string>
    <string name="temperature_c">Temperature (°C)</string>
    <string name="building_number_1">Building Number 1</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="building_number">Building Number</string>
    <string name="address">ADDRESS</string>
    <string name="username">USERNAME</string>
    <string name="request_emergency">REQUEST EMERGENCY</string>
    <string name="what_should_you_do_if_the_air_quality_is_dangerous">What should you do if the air quality is dangerous?</string>
    <string name="air_quality_indicators">AIR QUALITY INDICATORS</string>
    <string name="room_s_ventilation">Room\'s Ventilation</string>
</resources>