<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ControlPurifier">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/bariol_bold"
        android:text="@string/control_purifier"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/go_back"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="30dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="100dp">

        <ImageView
            android:id="@+id/fan"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/logo"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/fan"  />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/bariol_bold"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/room_s_ventilation"
            android:textColor="@color/black_transparent"
            android:textSize="30sp"   />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/bariol_bold"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:text="@string/fan_stuatus_on"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/bariol_bold"
            android:gravity="center"
            android:text="@string/turn_on_off_the_fan"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/switchCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="40dp"
            android:checked="false"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:textColor="@color/black_transparent"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            app:showText="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>